Add size for blocks.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .top_block{
     background-color: #FB264F;
+    height: 100px;
 }
 
 .mid_body{
@@ -8,4 +9,5 @@
 
 .bottom_block{
     background-color: #FB264F;
+    height: 100px;
 }
