--- a/style.css
+++ b/style.css
@@ -5,12 +5,13 @@
 
 .mid_body{
     background-color: #FDE8EC;
-    height: 654px;
+    height: 641px;
 }
 
 .bottom_block{
     background-color: #FB264F;
     height: 99px;
+    margin-top: 13px;
 }
 h1 {
     margin: 0px;
