--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .top_block{
-    background-color: #FB264F;
+    background: linear-gradient(270deg, rgba(251,38,79,1) 79%, rgba(255,255,255,1) 92%);
     height: 99px;
-    border-radius: 22px;
+    border-radius: 46.5px;
 }
 .mid_block{
     background: linear-gradient(0deg, rgba(253,232,236,1) 70%, rgba(255,255,255,1) 100%);    height: 641px;
