--- a/style.css
+++ b/style.css
@@ -18,8 +18,13 @@
 h1 {
     margin: 0px;
 }
+html {
+    min-height: 100%;
+
+    display: flex;
+    flex-direction: column;
+}
+
 body {
-    height: 100vh;
-    max-height: 100vh;
-    padding: 0;
-  }
+    flex-grow: 1;
+}
