--- a/style.css
+++ b/style.css
@@ -1,20 +1,28 @@
-.top_block{
-    background: linear-gradient(270deg, rgba(251,38,79,1) 79%, rgba(255,255,255,1) 92%);
-    height: 99px;
-    border-radius: 46.5px;
-}
-.mid_block{
-    background: linear-gradient(0deg, rgba(253,232,236,1) 70%, rgba(255,255,255,1) 100%);
-    height: 641px;
-    border-radius: 22px;
-}
-
-.bottom_block{
-    background-color: #FB264F;
-    height: 99px;
-    margin-top: 13px;
-    border-radius: 22px;
-}
-h1 {
-    margin: 0px;
-}
+body, html {
+    height: 100%;
+    margin: 1;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .top_block{
+      background: linear-gradient(270deg, rgba(251,38,79,1) 79%, rgba(255,255,255,1) 92%);
+      height: 99px;
+      border-radius: 46.5px;
+  }
+  .mid_block{
+      background: linear-gradient(0deg, rgba(253,232,236,1) 70%, rgba(255,255,255,1) 100%);
+      flex-grow: 1;
+      border-radius: 22px;
+  }
+  
+  .bottom_block{
+      background-color: #FB264F;
+      height: 99px;
+      margin-top: 13px;
+      border-radius: 22px;
+  }
+  h1{
+      margin: 0px;
+  }
