--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body, html {
       background: linear-gradient(0deg, rgba(253,232,236,1) 70%, rgba(255,255,255,1) 100%);
       flex-grow: 1;
       border-radius: 22px;
+      padding: 15px;
   }
   
   .bottom_block{
