--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body, html {
       align-items: center;
       position: relative;
   }
+
   .mid_block{
       background: linear-gradient(0deg, rgba(253,232,236,1) 70%, rgba(255,255,255,1) 100%);
       flex-grow: 1;
@@ -30,32 +31,38 @@ body, html {
   h1{
       margin: 0px;
   }
+
   top-title{
     font-size: 32px;
     color: #FDFFAC;
     position: absolute;
     left: 42%;
+
   }
   .bottom_block{
     display: flex;
     justify-content: space-around;
     align-items: center;
   }
+
   menu-1{
     font-size: 22px;
-    color: #FDFFAC;
+    color: #ffffff;
     padding-left: 10%;
   }
+
   menu-2{
     font-size: 22px;
     color: #FDFFAC;
   }
+
   menu-3{
     font-size: 22px;
-    color: #FDFFAC;
+    color: #ffffff;
   }
+  
   menu-4{
     font-size: 22px;
-    color: #FDFFAC;
+    color: #ffffff;
     padding-right: 10%;
   }
