--- a/style.css
+++ b/style.css
@@ -66,3 +66,30 @@ body, html {
     color: #FDFFAC;
     border-bottom: 2px solid #FDFFAC;
   }
+
+  .google_maps{
+    max-width:100%;
+    overflow:hidden;
+    color:red;
+    width:100%;
+    height:100%;
+  }
+
+  #google-maps-canvas{
+    height:100%;
+    width:100%;
+    max-width:100%;
+  }
+  
+  .maps_iframe{
+    height:100%;
+    width:100%;
+    border:0;
+  }
+
+  #google-maps-canvas img{
+    max-width:none!important;
+    background:none!important;
+    font-size: inherit;
+    font-weight:inherit;
+  }
