--- a/style.css
+++ b/style.css
@@ -36,8 +36,7 @@ body, html {
   top-title{
     font-size: 26px;
     color: #FDFFAC;
-    position: absolute;
-    left: 32%;
+    margin: 0 auto;
 
   }
   .bottom_block{
