--- a/style.css
+++ b/style.css
@@ -71,6 +71,9 @@ body, html {
     overflow:hidden;
     width:100%;
     height:60%;
+    flex-grow: 1;
+    border-radius: 22px;
+    margin-bottom: 15px;
   }
 
   #google-maps-canvas{
