--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ body, html {
     padding-right: 5%;
   }
 
+  /*Style navigation button with a separate class and delete style below.*/
   button{
     font-size: 20px;
     background: transparent;
