--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body, html {
   }
 
   /*Style navigation button with a separate class and delete style below.*/
-  button{
+  /*button{
     font-size: 20px;
     background: transparent;
     border: none;
@@ -59,6 +59,21 @@ body, html {
   }
 
   button:hover{
+    color: #FDFFAC;
+    transition: 0.3s;
+    border-bottom: 2px solid #FDFFAC;
+  }
+  */
+
+  .nav-button{
+    font-size: 20px;
+    background: transparent;
+    border: none;
+    border-bottom: 2px solid transparent;
+    color: #ffffff;
+  }
+  
+  .nav-button:hover{
     color: #FDFFAC;
     transition: 0.3s;
     border-bottom: 2px solid #FDFFAC;
