--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ body, html {
       border-radius: 22px;
       padding: 15px;
   }
+
+  .emb-menu{
+    border-radius: 22px;
+  }
   
   .bottom-block{
       background-color: #FB264F;
