Change styling on the yoyaku button on the yoyaku page.

--- a/style.css
+++ b/style.css
@@ -138,6 +138,6 @@ body, html {
     padding: 6px;
   }
   .yoyaku-button:hover{
-    border: 2px solid #f1ad30;
-    background-color: #cc1d40;
+    border: 2px solid #eef08d;
+    background-color: #e22248;
   }
