--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ body, html {
     color: #FB264F;
     transition: 0.3s;
     border: 2px solid #f1ad30;
-    background-color: #eed173;
+    background-color: #f8f29c;
   }
 
   .presentation-image{
