--- a/style.css
+++ b/style.css
@@ -134,10 +134,13 @@ body, html {
     border: 2px solid  #FDFFAC;
     color: #FDFFAC;
     border-radius: 11px;
-    padding: 6px;
+    padding: 4px;
+    font-size: 16px;
+    padding-left: 16px;
+    padding-right: 16px;
   }
   .yoyaku-button:hover{
     border: 2px solid #eef08d;
     background-color: #e22248;
-    font-size: 18px;
+    font-size: 16px;
   }
