--- a/style.css
+++ b/style.css
@@ -131,6 +131,9 @@ body, html {
     max-width: 70vh;
     border: solid 3px;
     border-image: linear-gradient(0deg, rgba(251,38,79,1) 19%, rgb(247, 228, 232) 92%) 1;
+    background: linear-gradient(#FB264F, #FB264F) padding-box, linear-gradient(0deg, rgba(251,38,79,1) 19%, rgb(247, 228, 232) 92%) border-box;
+    border: 4px solid transparent;
+    }
   }
 
   .yoyaku-button{
