--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body, html {
   }
 
   .emb-menu{
+    box-sizing: border-box;
     border-radius: 22px;
     border-image: linear-gradient(0deg, rgba(251,38,79,1) 19%, rgb(247, 228, 232) 92%) 1;
     background: linear-gradient(#FB264F, #FB264F) padding-box, linear-gradient(0deg, rgba(251,38,79,1) 19%, rgb(247, 228, 232) 92%) border-box;
