--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body, html {
     height: 100%;
     margin: 1;
-    padding: 0;
+    /*padding: 0;*/
     display: flex;
     flex-direction: column;
     font-family: sans-serif;
