--- a/style.css
+++ b/style.css
@@ -152,6 +152,7 @@ body, html {
     font-size: 16px;
     padding-left: 16px;
     padding-right: 16px;
+    min-width: 100%;
   }
 
   .yoyaku-button:hover{
