--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ body, html {
   }
   
   input[type = text] {
+    min-height: 25px;
     width : 100%;
     border-radius: 6px;
     border-color: #f1ad30;
