--- a/style.css
+++ b/style.css
@@ -177,7 +177,8 @@ body, html {
     min-height: 25px;
     width : 100%;
     border-radius: 6px;
-    border-color: #f1ad30;
+    border-color: #e22248;
+    padding-left: 15px;
   }
   
   .row{
