--- a/style.css
+++ b/style.css
@@ -154,6 +154,7 @@ body, html {
     padding-left: 16px;
     padding-right: 16px;
     min-width: 100%;
+    margin-top: 6px;
   }
 
   .yoyaku-button:hover{
