--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ body, html {
     width: 25%;
     float: left;
     margin-top: 6px;
-    margin-bottom: 20px;
+    /*margin-bottom: 20px;*/
   }
 
   .col-75 {
