--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ body, html {
   .maps-iframe{
     height:100%;
     width:100%;
-    border:0;
+    /*border:0;*/
   }
 
   #google-maps-canvas img{
