--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ body, html {
     padding: 6px;
     padding-left: 10px;
     padding-right: 10px;
+    z-index: 0;
   }
 
   .phone-button:hover{
